# bazel-deps

./: .bazel-installer-linux-x86_64.sh.sha256  .bazelrc.github  .bazelrc.travis  .gitignore  .travis.yml  BUILD  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE  WORKSPACE.bazel  bazel  dependencies.yaml  gen_maven_deps.sh  ij.bazelproject  pom.xml
.github/workflows/: ci.yml  release.yml
ci_scripts/: bootstrapping_bazel  build_deploy_jar.sh  build_fat_jar.sh  ci_install_bazel.sh  make_native_artifact.sh  make_update_dependencies.sh  make_update_maven_deps.sh  prepare_output.sh  resource-config.json
src/main/java/braintree/: BUILD  BazelDeps.java  Maven.java
src/scala/com/github/johnynek/bazel_deps/: AetherResolver.scala  BUILD  BUILD.bazel  CirceYaml.scala  Commands.scala  CoursierResolver.scala  CreatePom.scala  Decoders.scala  DepsModel.scala  FS.scala  FormatDeps.scala  GeneratePom.scala  GradleLockDependency.scala  GradleLockFile.scala  GradleResolver.scala  Graph.scala  IO.scala  Label.scala  MakeDeps.scala  MergeDeps.scala  Normalizer.scala  ParseProject.scala  ProjectModel.scala  Resolver.scala  S3Handler.scala  S3URLConnection.scala  S3URLHandler.scala  SettingsLoader.scala  Target.scala  TryMerge.scala  Writer.scala
src/scala/com/github/johnynek/bazel_deps/maven/: BUILD  Tool.scala
src/scala/com/github/johnynek/bazel_deps/templates/: external_workspace_backend.bzl  jar_artifact_backend.bzl
test/: all_tests.xml
test/scala/com/github/johnynek/bazel_deps/: BUILD  BUILD.bazel  CoursierTest.scala  CreatePomTest.scala  GenCheats.scala  GradleResolverTest.scala  GraphPropTest.scala  GraphTest.scala  ModelGenerators.scala  ModelTest.scala  NormalizerPropTest.scala  NormalizerTest.scala  ParseGeneratedDocTest.scala  ParseTest.scala  ParseTestCasesTest.scala  ParseTestUtil.scala  TargetTest.scala  TryMergeTest.scala  WriterGenerators.scala  WriterTest.scala
tools/build_rules/: prelude_bazel
